--- a/A6-admixture.Rmd
+++ b/A6-admixture.Rmd
@@ -1,6 +1,6 @@
 # Appendix F
 
-```{r setup, inlcude = FALSE}
+```{r setup, inlcude = FALSE, echo = FALSE, message = FALSE, warning= FALSE}
 library(tidyverse)
 panel <- read.delim(paste0('~/data/NZ_coreExome_1kgp/nz_1kgp.panel'), stringsAsFactors = FALSE) %>% filter(!pop %in% c('NAD','WPN','POL','EPN'))
 
@@ -9,9 +9,10 @@ panel <- read.delim(paste0('~/data/NZ_coreExome_1kgp/nz_1kgp.panel'), stringsAsF
 
 ```{r, echo = FALSE, fig.cap='(ref:cv)'}
 k_cv <- read.table('~/data/NZ_coreExome_1kgp/admixture/CV_error.txt', header = FALSE) %>% full_join(.,  read.table('~/data/NZ_coreExome_1kgp/admixture/projected/CV_error.txt', header = FALSE) %>% rename( cv_proj = V2), by = "V1") %>% arrange(V1) %>% rename(K = V1, "CV Error" = V2, "Projection CV Error" = cv_proj)
+
+knitr::kable(k_cv, caption = "(\\#tab:admixCV) Admixture cross-validation (CV) error for different values of K. CV Projection is the admixture cross-validation error for different K values from projecting the components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS onto the populations of \\gls{amr} and \\gls{pol}.")
 ```
 
-(ref:cv) Admixture cross-validation (CV) error for different values of K. CV Projection is the admixture cross-validation error for different K values from projecting the components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS onto the populations of \gls{amr} and \gls{pol}.
 
 The cross validation of K from 1 to 15 resulted in K = 11 having the minimum cross validation error.
 
