--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -207,9 +207,9 @@ UpSetR::upset(UpSetR::fromList(listInput), order.by = "freq", text.scale = 1.3, 
 ```{r}
 # create the table of kottgen snps from the data
 # age, sex, and bmi adjusted
-
+kot_bim <- read_delim('data/Ukbiobank/kottgen_ukbb_alleles.txt', col_names = c("CHR","SNP","GPOS","POS","REF","ALT"), delim = " ")
 # still need to flip snps to be in the same order as kottgen
-uk_kot_t1 %>% select(-file, -TEST, -SE, -NMISS,-STAT, -POS) %>% mutate_at(., vars("OR",contains('95')), funs(sprintf("%.2f",. ))) %>% unite("CI",c("L95","U95"), sep = " -") %>% mutate(P = purrr::map_chr(P, ~ format_p_md(p = .x, format = 'latex'))) %>%  mutate(SNP = paste0(SNP, ' (', grail_gene,')'), Effect = paste0(OR, ' [', CI,'], ', P)) %>% arrange(P) %>%  select(-grail_gene, -OR, -CI, -P, -CHR) %>% spread(key = gout, value = Effect) %>% select(-all)%>% kable(., format = 'latex', caption = '(\\#tab:ukbbkot) The odds ratios for the 30 variants reported in \\citep{Kottgen2013} for the different gout classification methods.', col.names = c("Marker", "A1", "Hospital","Self-report","Self-report or ULT","ULT","Winnard"), booktabs = TRUE, escape = FALSE) %>% kable_styling(latex_options = 'scale_down') %>% footnote(general = "OR [95% CI], P. ULT = Urate lowering therapy." , general_title = "", threeparttable = TRUE )
+uk_kot_t1 %>% select(-file, -TEST, -SE, -NMISS,-STAT, -POS) %>%  left_join(., kot_bim %>% select(SNP, REF, ALT)) %>% mutate(OR = ifelse(A1 != REF, 1/OR, OR), L95 = ifelse(A1 != REF, 1/U95, L95), U95 = ifelse(A1 != REF, 1/L95, U95), mod = ifelse(A1 != REF, 1, 0)) %>% mutate_at(., vars("OR",contains('95')), funs(sprintf("%.2f",. ))) %>% unite("CI",c("L95","U95"), sep = " -") %>% mutate(P = purrr::map_chr(P, ~ format_p_md(p = .x, format = 'latex'))) %>%  mutate(SNP = paste0(SNP, ' (', grail_gene,')'), Effect = paste0(OR, ' [', CI,'], ', P)) %>% arrange(P) %>%  select(-grail_gene, -OR, -CI, -P, -CHR) %>% spread(key = gout, value = Effect) %>% select(-all) %>%  kable(., format = 'latex', caption = '(\\#tab:ukbbkot) The odds ratios for the 30 variants reported in \\cite{Kottgen2013} for the different gout classification methods.', col.names = c("Marker", "A1", "Hospital","Self-report","Self-report or ULT","ULT","Winnard"), booktabs = TRUE, escape = FALSE) %>% kable_styling(latex_options = 'scale_down') %>% footnote(general = "OR [95\\% CI], P. ULT = Urate lowering therapy." , general_title = "", threeparttable = TRUE )
 
 ```
 
